# rlox

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: anonymous-fun-thrice.lox  area.lox  block-assign-outer.lox  block-nested-scopes.lox  call-args.lox  call-call.lox  clock.lox  fibonacci-iter-timed.lox  fibonacci-iter.lox  fibonacci-iter.nut  fibonacci-recursive.lox  fibonacci-recursive.nut  first-class-fun.lox  for.lox  fun-deepish-return.lox  fun-greet-args.lox  fun-mutate-global.lox  fun-read-global.lox  fun-return-nothing.lox  fun-with-scopes-1.lox  fun-with-scopes-2.lox  fun-with-scopes-3.lox  fun-with-scopes-4.lox  fun-with-scopes-5.lox  fun-with-scopes-6.lox  fun-with-scopes.lox  fundecl.lox  hello.lox  if-else-false.lox  if-else-true.lox  if.lox  invalid_token.lox  mutate-closure-2.lox  mutate-closure-3.lox  mutate-closure.lox  undefined_identifier.lox  while.lox
src/: ast.rs  bindings.rs  environment.rs  error.rs  interpreter.rs  lox.lalrpop  main.rs  resolver.rs  test.rs  value.rs
util/: test-all.sh  test.sh
