[package]
name = "rlox"
version = "0.1.0"
authors = ["Roger Lipscombe"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.8"
regex = "1.3"
codespan-reporting = "0.11.1"
clap = { version = "3.2.2", features = ["derive"] }

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"]}
